# ChipsChallenge

./: Cargo.toml
data/: data.json
data/levels/: lesson1.json  lesson2.json  lesson3.json  lesson4.json  lesson5.json  level1.json  level10.json  level11.json  level12.json  level13.json  level14.json  level15.json  level16.json  level17.json  level18.json  level19.json  level2.json  level20.json  level21.json  level23.json  level3.json  level4.json  level5.json  level6.json  level7.json  level8.json  level9.json  template.json
examples/: editor.rs  game.rs  play.rs
src/: camera.rs  dto.rs  editor.rs  entities.rs  entity.rs  event.rs  game.rs  inventory.rs  level.rs  lib.rs  object.rs  player.rs  render.rs  sprites.rs  terrain.rs  tile.rs
src/core/: connection.rs  dir.rs  dto.rs  entities.rs  entity.rs  entitymap.rs  event.rs  field.rs  gamestate.rs  inbuf.rs  mod.rs  playerstate.rs  quadtree.rs  terrain.rs
src/core/entities/: blob.rs  block.rs  bomb.rs  bug.rs  creature.rs  fireball.rs  glider.rs  paramecium.rs  pickup.rs  pinkball.rs  player.rs  socket.rs  tank.rs  teeth.rs  thief.rs  walker.rs  wall.rs
src/entities/: block.rs  bomb.rs  bug.rs  chip.rs  door.rs  fire.rs  fireball.rs  gate.rs  glider.rs  key.rs  pickup.rs  pink_ball.rs  pinkball.rs  player.rs  socket.rs  spawner.rs  sprite.rs  tank.rs  thief.rs  wall.rs
src/visual/: camera.rs  handlers.rs  mod.rs  model.rs  object.rs  objectmap.rs  render.rs  sprite.rs  tile.rs  visualstate.rs
